Prevent text wrapping in pane headers.

--- a/src/styles/brackets.less
+++ b/src/styles/brackets.less
@@ -493,6 +493,7 @@ a, img {
         padding: 5px 10px;
         color: @bc-text-thin-quiet;
         background-color: @background;
+        white-space: nowrap;
         
         .dark & {
             color: @dark-bc-text-quiet;
